--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block content
-  h3 Welcome to roots!
-  :marked
-    Find tutorials and documentation at http://roots.cx : )
+  h1 Jade2PHP
+  h4 Unleash the power of Jade for PHP!
+  h2 Demo
+  .Demo
+    textarea.Demo-input
+    .Demo-output
